--- a/ife_exercise_2v2.0/index.html
+++ b/ife_exercise_2v2.0/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link type="text/css" rel="stylesheet" href="main.css" />
-        <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        
     </head>
     <body>
     	<!-- 导航栏 -->
@@ -15,31 +15,31 @@
 	    		<div class="empty"></div>
 	    		<!-- 对于以下ul，通过尝试，个人的理解是把.navbar-nav设成display:flex清除掉了bootstrap里设置的左浮动，否则 -->
 	    		<ul class="nav navbar-nav">
-			        <li class="active"><a href="#">HOME</a></li>
-			        <li class="dropdown">
-			            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PRODUCT <span class="caret"></span></a>
-			            <ul class="dropdown-menu">
-			              <li><a href="#">Action</a></li>
-			              <li><a href="#">Another action</a></li>
-			              <li><a href="#">Something else here</a></li>
+			        <li class="nav-module"><a href="#" class="nav-title first-title">HOME</a></li>
+			        <li class="dropdown nav-module" onmouseover="occur_droplist(this)" onmouseout="disappear_droplist(this)">
+			            <a href="#"  class="nav-title">PRODUCT <span class="glyphicon glyphicon-chevron-down"></span></a>
+			            <ul class="droplist">
+			              <li class="droplist-1"><a href="#">Action</a></li>
+			              <li class="droplist-1"><a href="#">Another action</a></li>
+			              <li class="droplist-1"><a href="#">Something else here</a></li>
 			            <!-- <li role="separator" class="divider"></li> -->
 			            <!-- <li><a href="#">Separated link</a></li> -->			            
 			            </ul>
 			          </li>
-			          <li class="dropdown">
-				        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SUPPORT <span class="caret"></span></a>
-				        <ul class="dropdown-menu">
-				          <li><a href="#">Action</a></li>
-				          <li><a href="#">Another action</a></li>
-				          <li><a href="#">Something else here</a></li>			            		            
+			          <li class="dropdown nav-module">
+				        <a href="#"  class="nav-title">SUPPORT <span class="glyphicon glyphicon-chevron-down"></span></a>
+				        <ul class="droplist">
+				          <li class="droplist-1"><a href="#">Action</a></li>
+			              <li class="droplist-1"><a href="#">Another action</a></li>
+			              <li class="droplist-1"><a href="#">Something else here</a></li>			            		            
 				        </ul>
 			        </li>
-			        <li class="dropdown">
-				        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT <span class="caret"></span></a>
-				        <ul class="dropdown-menu">
-				          <li><a href="#">Action</a></li>
-				          <li><a href="#">Another action</a></li>
-				          <li><a href="#">Something else here</a></li>			            		            
+			        <li class="dropdown nav-module">
+				        <a href="#"  class="nav-title">ABOUT <span class="glyphicon glyphicon-chevron-down"></span></a>
+				        <ul class="droplist">
+				          <li class="droplist-1"><a href="#">Action</a></li>
+			              <li class="droplist-1"><a href="#">Another action</a></li>
+			              <li class="droplist-1"><a href="#">Something else here</a></li>	            		            
 				        </ul>
 			        </li>
 			      </ul>
@@ -83,17 +83,60 @@
     			<!-- 占空间的空div -->
     			<div class="blank"></div>
     			<!-- 轮播图片 -->
-    			<div class="center-img">
+    			<!-- <div class="center-img">
     				<img src="images/midpic.jpg" alt="" />
     			</div>
-    			<div class="blank"></div> 
+    			<div class="blank"></div>  -->
+
+				<div id="carousel-example-generic" class="carousel slide center-img" data-ride="carousel">
+				  <!-- Indicators -->
+				  <ol class="carousel-indicators">
+				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				  </ol>
+
+				  <!-- Wrapper for slides -->
+				  <div class="carousel-inner" role="listbox">
+				    <div class="item active">
+				      <img src="images/midpic.jpg" alt="">
+				      <div class="carousel-caption carousel-text">
+				        Some Text
+				      </div>
+				    </div>
+				    <div class="item">
+				      <img src="images/midpic2.jpg" alt="">
+				      <div class="carousel-caption carousel-text">
+				        Some Text
+				      </div>
+				    </div>
+				    <div class="item">
+				      <img src="images/midpic4.jpg" alt="">
+				      <div class="carousel-caption carousel-text">
+				        Some Text
+				      </div>
+				    </div>
+				  </div>
+
+				  <!-- Controls -->
+				  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				    <span class="sr-only">Previous</span>
+				  </a>
+				  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				    <span class="sr-only">Next</span>
+				  </a>
+				</div>
+
     			<!-- tab -->
 				<ul class="nav nav-tabs">
-				  <li class="active"><a href="#">TABONE</a></li>
-				  <li><a href="#">TABTWO</a></li>
-				  <li><a href="#">TABTHR</a></li>
-				  <li><a href="#">TABFOR</a></li>
+				  <li class="active" onclick="nav_click(this)">TABONE</li>
+				  <li onclick="nav_click(this)">TABTWO</li>
+				  <li onclick="nav_click(this)">TABTHR</li>
+				  <li onclick="nav_click(this)">TABFOR</li>
 				</ul>
+				<div id="tab-text"></div>
 				<!-- table -->
 				<div class="table_content">
 					<table class="table">
@@ -110,15 +153,14 @@
 				<div class="form_column">
 					<div class="form-content">
 						<form action="">
-							<select name="country" id="country_1">
-								<option value="">select your country</option>
+							<select name="country" id="country_1" onchange="change_city(this)">
+								<option value=""  disabled selected>select your country</option>
 								<option value="China">China</option>
 								<option value="America">America</option>
 							</select>
 							<select name="country" id="country_2">
-								<option value="">select your country</option>
-								<option value="China">China</option>
-								<option value="America">America</option>
+								<option value=""  disabled selected>select your city</option>
+								
 							</select>
 							<input type="text" value="blank">
 							<input class="submit" type="submit" value="submit">
@@ -131,5 +173,8 @@
 				<footer>&copy;2017 IFE</footer>
     		</div>
     	</div>
+    	<script src="./main.js"></script>
+    	<script src="./jquery-3.1.1.min.js"></script>
+    	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </body>
 </html>
