--- a/ife_exercise_2v2.0/index.html
+++ b/ife_exercise_2v2.0/index.html
@@ -127,8 +127,9 @@
 					</ol>  -->
 
 				<div class="carousel-container center-img">
-				    <div class="carousel-wrap" style="left:0px;>
-				      <img src="images/midpic4.jpg" alt="">
+					<!-- .carousel-wrap实现左右滑动需要 -->
+				    <!-- <div class="carousel-wrap" style="left:0px;">   -->
+				      <!-- <img src="images/midpic4.jpg" alt=""> -->
 				      <img src="images/midpic.jpg" alt="">
 				      <img src="images/midpic2.jpg" alt="">
 				      <img src="images/midpic3.jpg" alt="">
@@ -137,10 +138,10 @@
 				    </div>				    			    
 				</div>
 				<div class="carousel-tips">
-				      <p class="carousel-tip carousel-tip-active">--&nbsp;&nbsp;&nbsp;&nbsp;--</p>
-				      <p class="carousel-tip">--&nbsp;&nbsp;&nbsp;&nbsp;--</p>
-				      <p class="carousel-tip">--&nbsp;&nbsp;&nbsp;&nbsp;--</p>
-				      <p class="carousel-tip">--&nbsp;&nbsp;&nbsp;&nbsp;--</p>
+				      <div class="carousel-tip carousel-tip-active"></div>
+				      <div class="carousel-tip"></div>
+				      <div class="carousel-tip"></div>
+				      <div class="carousel-tip"></div>
 				</div>	
 				  
 
