carousel slide bug

--- a/ife_exercise_2v2.0/index.html
+++ b/ife_exercise_2v2.0/index.html
@@ -128,8 +128,7 @@
 
 				<div class="carousel-container center-img">
 					<!-- .carousel-wrap实现左右滑动需要 -->
-				    <!-- <div class="carousel-wrap" style="left:0px;">   -->
-				      <!-- <img src="images/midpic4.jpg" alt=""> -->
+				    <div class="carousel-wrap" style="left:0px;">  
 				      <img src="images/midpic.jpg" alt="">
 				      <img src="images/midpic2.jpg" alt="">
 				      <img src="images/midpic3.jpg" alt="">
