edit and delete has a few problems

--- a/ife_exercise_4/index.html
+++ b/ife_exercise_4/index.html
@@ -95,6 +95,12 @@
             <button id="submit-edit">确定</button>
             <button id="cancel-edit">取消</button>
         </div>
+        <!-- 删除界面 -->
+        <div class="delete-layout">
+            <p>确定要删除吗？</p>
+            <button id="submit-delete">确定</button>
+            <button id="cancel-delete">取消</button>
+        </div>
     	
         <script src="./setnav.js"></script>
         <script src="./settable.js"></script>
