edit and delete completed

--- a/ife_exercise_4/index.html
+++ b/ife_exercise_4/index.html
@@ -97,7 +97,7 @@
         </div>
         <!-- 删除界面 -->
         <div class="delete-layout">
-            <p>确定要删除吗？</p>
+            <p>确定要删除<span id="delete-name"></span>吗？</p>
             <button id="submit-delete">确定</button>
             <button id="cancel-delete">取消</button>
         </div>
