collapse complete, still in mask's style problem

--- a/ife_exercise_4/index.html
+++ b/ife_exercise_4/index.html
@@ -21,9 +21,7 @@
 			            <ul class="droplist">
 			              <li class="droplist-1"><a href="#">Action</a></li>
 			              <li class="droplist-1"><a href="#">Another action</a></li>
-			              <li class="droplist-1"><a href="#">Something else here</a></li>
-			            <!-- <li role="separator" class="divider"></li> -->
-			            <!-- <li><a href="#">Separated link</a></li> -->			            
+			              <li class="droplist-1"><a href="#">Something else here</a></li>	            
 			            </ul>
 			          </li>
 			          <li class="dropdown nav-module">
@@ -58,14 +56,14 @@
 
     	<div class='main'>
     		<div class="page-nav" onmouseover="modify_page_nav()" onmouseout="recover_page_nav()">
-    			<div class="page-nav-item page-nav-active">Level 1 Some Text</div>
-    			<!-- <div class="page-nav-item">Level 1 Some Text
-                    <ul class="nav-second-level">
-                        <li>Level 2 Some Text</li>
-                        <li>Level 2 Some Text</li>
-                        <li>Level 2 Some Text</li>
-                    </ul>
-                </div> -->    			
+    			<!-- <div class="page-nav-item page-nav-active">Level 1 Some Text</div>
+    			<div class="page-nav-item">Level 1 Some Text</div>
+                <ul class="nav-second-active">
+                    <li>Level 2 Some Text</li>
+                    <li>Level 2 Some Text</li>
+                    <li>Level 2 Some Text</li>
+                </ul>
+                    	 -->		
     		</div>
     		<div class="content">
     			<div class="page-content">
