--- a/ife_exercise_4/index.html
+++ b/ife_exercise_4/index.html
@@ -84,12 +84,18 @@
         <div class="mask"></div>
         <!-- 编辑界面 -->
         <div class="edit-layout">
-            <label for="Name">Name </label>
-            <input type="text" name="Name">
-            <label for="Content">Content </label>
-            <input type="text" name="Content">
-            <label for="Value">Value </label>
-            <input type="text" name="Value">
+            <div class="label-input">
+                <label for="Name">Name&nbsp&nbsp&nbsp&nbsp</label>
+                <input type="text" name="Name">
+            </div>
+            <div class="label-input">
+                <label for="Content">Content </label>
+                <input type="text" name="Content">
+            </div>
+            <div class="label-input">
+                <label for="Value">Value&nbsp&nbsp&nbsp&nbsp</label>
+                <input type="text" name="Value">
+            </div>
             <button id="submit-edit">确定</button>
             <button id="cancel-edit">取消</button>
         </div>
